force-app/main/default/objects/Usuario_X_Empresa__c/Usuario_X_Empresa__c.object-meta.xml
<CustomObject>
    <label>Usuario por Empresa</label>
    <nameField>
        <displayFormat>UE-{000000}</displayFormat>
        <label>Correlativo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Usuarios por Empresa</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>