force-app/main/default/objects/Usuario_X_Empresa__c/fields/Cargar_Generar_Planilla__c.field-meta.xml
<CustomField>
    <fullName>Cargar_Generar_Planilla__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cargar/Generar Planilla</label>
    <type>Checkbox</type>
</CustomField>