force-app/main/default/objects/Usuario_X_Empresa__c/fields/Creado_por__c.field-meta.xml
<CustomField>
    <fullName>Creado_por__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Creado por</label>
    <referenceTo>Usuario_Portal_Empresarial__c</referenceTo>
    <relationshipLabel>Usuarios por Empresa (Creado por)</relationshipLabel>
    <relationshipName>Usuarios_por_Empresa</relationshipName>
    <type>Lookup</type>
</CustomField>