force-app/main/default/objects/Usuario_X_Empresa__c/fields/Crear_Usuarios__c.field-meta.xml
<CustomField>
    <fullName>Crear_Usuarios__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Crear Usuarios</label>
    <type>Checkbox</type>
</CustomField>