force-app/main/default/objects/Usuario_X_Empresa__c/fields/Empresa2__c.field-meta.xml
<CustomField>
    <fullName>Empresa2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Empresa</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Juridico</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Usuarios por Empresa</relationshipLabel>
    <relationshipName>Usuarios_Empresa</relationshipName>
    <type>Lookup</type>
</CustomField>