force-app/main/default/objects/Usuario_X_Empresa__c/fields/Planilla_Seguro_Social__c.field-meta.xml
<CustomField>
    <fullName>Planilla_Seguro_Social__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Planilla Seguro Social</label>
    <type>Checkbox</type>
</CustomField>