force-app/main/default/objects/Usuario_X_Empresa__c/fields/Reportes__c.field-meta.xml
<CustomField>
    <fullName>Reportes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reportes</label>
    <type>Checkbox</type>
</CustomField>