force-app/main/default/objects/Usuario_X_Empresa__c/fields/Usuario__c.field-meta.xml
<CustomField>
    <fullName>Usuario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuario Portal Empresarial</label>
    <referenceTo>Usuario_Portal_Empresarial__c</referenceTo>
    <relationshipName>Usuarios_X_Empresa1</relationshipName>
    <type>Lookup</type>
</CustomField>